<resources>
    <string name="app_name">Wonka</string>
    <string name="detail_name">Detail</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">No data</string>
    <string name="no_internet">Ups no internet connection.</string>
    <string name="error_client_specific">Error client specific</string>
    <string name="gender">Gender</string>
    <string name="profession">Profession</string>
    <string name="country">Country</string>
    <string name="color">Color</string>
    <string name="food">Food</string>
    <string name="age">Age</string>
    <string name="personal_information">Personal Information</string>
    <string name="favorite">Favorite</string>
    <string name="filter">FILTER</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_gender">Select gender</string>

    <string-array name="gender_filer">
        <item>Male</item>
        <item>Female</item>
        <item>Both</item>
    </string-array>
</resources>
